
2004/01/11 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a bug in gwenhywfar.m4
- applied a patch submitted by Ronny Buchmann which turns the specfile into a 
  multi-distribution spec file.


2004/01/10 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- logger: added function GWEN_Logger_AddLogger. This functions allows to
  log to multiple loggers in parallel. This is interesting for debugging
  purposes when you still want to log to syslog (or whatever service you
  like) but want to additionally log to a log file or stderr.
- Makefile.cvs: added my own target, since somebody always comments out my
  "./configure" ;-) And I really think I know who does ;-)
- posix/init.c: removed debugging output upon startup/shutdown of Gwen. I am
  convinced now that __attribute__((constructor)) really works


===========================================================================
MARK: released gwenhywfar-0.9.4rc3 (2004/01/07)
===========================================================================


2004/01/07 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- cleanup of Makefiles
- prepared next release


2004/01/05 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added "system.h", which defines some system dependant macros on some
  platforms
- process.c: less verbous signal handler
- aborted PalmOS port
- reverted debug.h macros to use snprintf again, since all architectures
  except PalmOS have it, and PalmOS is no longer supported
- added padding submodule to crypt module. This includes some commonly used
  padding algorithms (like ISO 9796 and ANSIX9_23). Those are taken from the
  GWEN_IPC package (and they originated from Fabian Kaiser's C++-code for 
  OpenHBCI in rsakey.cpp, with modifications and translation to C).


2004/01/04 Martin Preuss <martin@libchipcard.de>